exports[`Update statement > generates statements for Article 1`] = `
[
  {
    "status": "deleted",
    "title": "My first published article",
    "score": 0,
    "tags": []
  },
  {
    "status": "deleted",
    "title": "My second published article",
    "score": 0,
    "tags": []
  },
  {
    "status": "deleted",
    "title": "My first published article in root category",
    "score": 0,
    "tags": []
  },
  {
    "status": "deleted",
    "title": "My second published article in root category",
    "score": 0,
    "tags": []
  },
  {
    "status": "deleted",
    "title": "My third published article in root category",
    "score": 0,
    "tags": []
  }
]
`;

exports[`Update statement > generates statements for Article 2`] = `
[
  {
    "status": "published",
    "title": "My first draft article",
    "score": 1,
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion"
        }
      }
    ]
  },
  {
    "status": "published",
    "title": "My second draft article",
    "score": 1,
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion"
        }
      }
    ]
  }
]
`;

exports[`Update statement > generates statements for Article 3`] = `
[
  {
    "status": "published",
    "title": "My first draft article",
    "score": 1,
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "High-tech"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "TV"
        }
      }
    ]
  },
  {
    "status": "published",
    "title": "My second draft article",
    "score": 1,
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "High-tech"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "TV"
        }
      }
    ]
  }
]
`;

exports[`Update statement > generates statements for Article 4`] = `
[
  {
    "title": "My first draft article",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Tag 0"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "Tag 1"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "Tag 2"
        }
      },
      {
        "order": 3,
        "tag": {
          "title": "Tag 3"
        }
      },
      {
        "order": 4,
        "tag": {
          "title": "Tag 4"
        }
      },
      {
        "order": 5,
        "tag": {
          "title": "Tag 5"
        }
      },
      {
        "order": 6,
        "tag": {
          "title": "Tag 6"
        }
      },
      {
        "order": 7,
        "tag": {
          "title": "Tag 7"
        }
      },
      {
        "order": 8,
        "tag": {
          "title": "Tag 8"
        }
      },
      {
        "order": 9,
        "tag": {
          "title": "Tag 9"
        }
      },
      {
        "order": 10,
        "tag": {
          "title": "Tag 10"
        }
      },
      {
        "order": 11,
        "tag": {
          "title": "Tag 11"
        }
      },
      {
        "order": 12,
        "tag": {
          "title": "Tag 12"
        }
      },
      {
        "order": 13,
        "tag": {
          "title": "Tag 13"
        }
      },
      {
        "order": 14,
        "tag": {
          "title": "Tag 14"
        }
      },
      {
        "order": 15,
        "tag": {
          "title": "Tag 15"
        }
      },
      {
        "order": 16,
        "tag": {
          "title": "Tag 16"
        }
      },
      {
        "order": 17,
        "tag": {
          "title": "Tag 17"
        }
      },
      {
        "order": 18,
        "tag": {
          "title": "Tag 18"
        }
      },
      {
        "order": 19,
        "tag": {
          "title": "Tag 19"
        }
      },
      {
        "order": 20,
        "tag": {
          "title": "Tag 20"
        }
      },
      {
        "order": 21,
        "tag": {
          "title": "Tag 21"
        }
      },
      {
        "order": 22,
        "tag": {
          "title": "Tag 22"
        }
      },
      {
        "order": 23,
        "tag": {
          "title": "Tag 23"
        }
      },
      {
        "order": 24,
        "tag": {
          "title": "Tag 24"
        }
      }
    ]
  },
  {
    "title": "My second draft article",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Tag 0"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "Tag 1"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "Tag 2"
        }
      },
      {
        "order": 3,
        "tag": {
          "title": "Tag 3"
        }
      },
      {
        "order": 4,
        "tag": {
          "title": "Tag 4"
        }
      },
      {
        "order": 5,
        "tag": {
          "title": "Tag 5"
        }
      },
      {
        "order": 6,
        "tag": {
          "title": "Tag 6"
        }
      },
      {
        "order": 7,
        "tag": {
          "title": "Tag 7"
        }
      },
      {
        "order": 8,
        "tag": {
          "title": "Tag 8"
        }
      },
      {
        "order": 9,
        "tag": {
          "title": "Tag 9"
        }
      },
      {
        "order": 10,
        "tag": {
          "title": "Tag 10"
        }
      },
      {
        "order": 11,
        "tag": {
          "title": "Tag 11"
        }
      },
      {
        "order": 12,
        "tag": {
          "title": "Tag 12"
        }
      },
      {
        "order": 13,
        "tag": {
          "title": "Tag 13"
        }
      },
      {
        "order": 14,
        "tag": {
          "title": "Tag 14"
        }
      },
      {
        "order": 15,
        "tag": {
          "title": "Tag 15"
        }
      },
      {
        "order": 16,
        "tag": {
          "title": "Tag 16"
        }
      },
      {
        "order": 17,
        "tag": {
          "title": "Tag 17"
        }
      },
      {
        "order": 18,
        "tag": {
          "title": "Tag 18"
        }
      },
      {
        "order": 19,
        "tag": {
          "title": "Tag 19"
        }
      },
      {
        "order": 20,
        "tag": {
          "title": "Tag 20"
        }
      },
      {
        "order": 21,
        "tag": {
          "title": "Tag 21"
        }
      },
      {
        "order": 22,
        "tag": {
          "title": "Tag 22"
        }
      },
      {
        "order": 23,
        "tag": {
          "title": "Tag 23"
        }
      },
      {
        "order": 24,
        "tag": {
          "title": "Tag 24"
        }
      }
    ]
  }
]
`;

exports[`Update statement > generates statements for Article 5`] = `
[
  {
    "title": "My first draft article",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Tag 0"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "Tag 1"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "Tag 2"
        }
      },
      {
        "order": 3,
        "tag": {
          "title": "Tag 3"
        }
      },
      {
        "order": 4,
        "tag": {
          "title": "Tag 4"
        }
      },
      {
        "order": 5,
        "tag": {
          "title": "Tag 5"
        }
      },
      {
        "order": 6,
        "tag": {
          "title": "Tag 6"
        }
      },
      {
        "order": 7,
        "tag": {
          "title": "Tag 7"
        }
      },
      {
        "order": 8,
        "tag": {
          "title": "Tag 8"
        }
      },
      {
        "order": 9,
        "tag": {
          "title": "Tag 9"
        }
      },
      {
        "order": 10,
        "tag": {
          "title": "Tag 10"
        }
      },
      {
        "order": 11,
        "tag": {
          "title": "Tag 11"
        }
      },
      {
        "order": 12,
        "tag": {
          "title": "Tag 12"
        }
      },
      {
        "order": 13,
        "tag": {
          "title": "Tag 13"
        }
      },
      {
        "order": 14,
        "tag": {
          "title": "Tag 14"
        }
      },
      {
        "order": 15,
        "tag": {
          "title": "Tag 15"
        }
      },
      {
        "order": 16,
        "tag": {
          "title": "Tag 16"
        }
      },
      {
        "order": 17,
        "tag": {
          "title": "Tag 17"
        }
      },
      {
        "order": 18,
        "tag": {
          "title": "Tag 18"
        }
      },
      {
        "order": 19,
        "tag": {
          "title": "Tag 19"
        }
      },
      {
        "order": 20,
        "tag": {
          "title": "Tag 20"
        }
      },
      {
        "order": 21,
        "tag": {
          "title": "Tag 21"
        }
      },
      {
        "order": 22,
        "tag": {
          "title": "Tag 22"
        }
      },
      {
        "order": 23,
        "tag": {
          "title": "Tag 23"
        }
      },
      {
        "order": 24,
        "tag": {
          "title": "Tag 24"
        }
      }
    ]
  },
  {
    "title": "My second draft article",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Tag 0"
        }
      },
      {
        "order": 1,
        "tag": {
          "title": "Tag 1"
        }
      },
      {
        "order": 2,
        "tag": {
          "title": "Tag 2"
        }
      },
      {
        "order": 3,
        "tag": {
          "title": "Tag 3"
        }
      },
      {
        "order": 4,
        "tag": {
          "title": "Tag 4"
        }
      },
      {
        "order": 5,
        "tag": {
          "title": "Tag 5"
        }
      },
      {
        "order": 6,
        "tag": {
          "title": "Tag 6"
        }
      },
      {
        "order": 7,
        "tag": {
          "title": "Tag 7"
        }
      },
      {
        "order": 8,
        "tag": {
          "title": "Tag 8"
        }
      },
      {
        "order": 9,
        "tag": {
          "title": "Tag 9"
        }
      },
      {
        "order": 10,
        "tag": {
          "title": "Tag 10"
        }
      },
      {
        "order": 11,
        "tag": {
          "title": "Tag 11"
        }
      },
      {
        "order": 12,
        "tag": {
          "title": "Tag 12"
        }
      },
      {
        "order": 13,
        "tag": {
          "title": "Tag 13"
        }
      },
      {
        "order": 14,
        "tag": {
          "title": "Tag 14"
        }
      },
      {
        "order": 15,
        "tag": {
          "title": "Tag 15"
        }
      },
      {
        "order": 16,
        "tag": {
          "title": "Tag 16"
        }
      },
      {
        "order": 17,
        "tag": {
          "title": "Tag 17"
        }
      },
      {
        "order": 18,
        "tag": {
          "title": "Tag 18"
        }
      },
      {
        "order": 19,
        "tag": {
          "title": "Tag 19"
        }
      },
      {
        "order": 20,
        "tag": {
          "title": "Tag 20"
        }
      },
      {
        "order": 21,
        "tag": {
          "title": "Tag 21"
        }
      },
      {
        "order": 22,
        "tag": {
          "title": "Tag 22"
        }
      },
      {
        "order": 23,
        "tag": {
          "title": "Tag 23"
        }
      },
      {
        "order": 24,
        "tag": {
          "title": "Tag 24"
        }
      }
    ]
  }
]
`;
